src/test/ui/hrtb/issue-30786.stderr
error[E0599]: no method named `filterx` found for struct `Map` in the current scope
  --> $DIR/issue-30786.rs:118:22
   |
LL | pub struct Map<S, F> {
   | -------------------- method `filterx` not found for this struct
...
LL |     let filter = map.filterx(|x: &_| true);
   |                      ^^^^^^^ method not found in `Map<Repeat, [closure@$DIR/issue-30786.rs:117:27: 117:34]>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `StreamExt` defines an item `filterx`, perhaps you need to implement it
  --> $DIR/issue-30786.rs:64:1
   |
LL | pub trait StreamExt
   | ^^^^^^^^^^^^^^^^^^^
help: one of the expressions' fields has a method of the same name
   |
LL |     let filter = map.stream.filterx(|x: &_| true);
   |                      +++++++

error[E0599]: no method named `countx` found for struct `Filter` in the current scope
  --> $DIR/issue-30786.rs:130:24
   |
LL | pub struct Filter<S, F> {
   | ----------------------- method `countx` not found for this struct
...
LL |     let count = filter.countx();
   |                        ^^^^^^ method not found in `Filter<Map<Repeat, for<'r> fn(&'r u64) -> &'r u64 {identity::<u64>}>, [closure@$DIR/issue-30786.rs:129:30: 129:37]>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `StreamExt` defines an item `countx`, perhaps you need to implement it
  --> $DIR/issue-30786.rs:64:1
   |
LL | pub trait StreamExt
   | ^^^^^^^^^^^^^^^^^^^
help: one of the expressions' fields has a method of the same name
   |
LL |     let count = filter.stream.countx();
   |                        +++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
